--- a/HydraBot-master/resources/index.html
+++ b/HydraBot-master/resources/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>HydraBot</title>
+    <title>TrifoiBot</title>
   </head>
   <body>
-    <h1>HydraBot for Discord</h1>
+    <h1>TrifoiBot for Discord</h1>
     <p><a href="{{ADD_SERVER_URL}}">Add it to your server!</a></p>
-    <p><a href="https://github.com/Stixxl/HydraBot">Stixxl/HydraBot@GitHub</a></p>
+    <p><a href="https://github.com/trifoi99/trifoibot">Stixxl/HydraBot@GitHub</a></p>
   </body>
 </html>
